Add github token and ready_for_review event trigger on plan

--- a/abc.templates/base-workflows/contents/workflows/guardian-run.yml
+++ b/abc.templates/base-workflows/contents/workflows/guardian-run.yml
@@ -121,6 +121,7 @@ jobs:
         shell: 'bash'
         env:
           ENTRYPOINT: '${{ inputs.entrypoint }}'
+          GUARDIAN_GITHUB_TOKEN: '${{ github.token }}'
         run: |-
           DIRECTORIES=$(guardian entrypoints -dir="${ENTRYPOINT}" -reporter=none)
           echo "entrypoints -> ${DIRECTORIES}"
