Add GITHUB_JOB_NAME to env var in base workflow templates

--- a/abc.templates/base-workflows/contents/workflows/guardian-plan.yml
+++ b/abc.templates/base-workflows/contents/workflows/guardian-plan.yml
@@ -106,6 +106,7 @@ jobs:
 
     env:
       DIRECTORY: '${{ matrix.working_directory }}'
+      GITHUB_JOB_NAME: '${{ github.job }} (${{ matrix.working_directory }})'
 
     steps:
       - name: 'Checkout'
