--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -55,13 +55,15 @@ jobs:
 
       - name: 'Build Guardian'
         uses: 'goreleaser/goreleaser-action@90a3faa9d0182683851fbfa97ca1a2cb983bfca3' # ratchet:goreleaser/goreleaser-action@v6
+        env:
+          VERSION: '${{ github.workflow }}-${{ github.run_id }}-${{ github.run_attempt }}'
         with:
           distribution: 'goreleaser'
           version: 'v1.18.2'
           args: 'build --snapshot --single-target --clean --id guardian --output dist/guardian'
 
       - name: 'Upload Guardian Binary'
-        uses: 'actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08' # ratchet:actions/upload-artifact@v4
+        uses: 'actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1' # ratchet:actions/upload-artifact@v4
         with:
           name: 'guardian'
           path: 'dist/guardian'
@@ -83,7 +85,7 @@ jobs:
           fetch-depth: 0 # get everything so we can use git diff
 
       - name: 'Download Guardian'
-        uses: 'actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16' # ratchet:actions/download-artifact@v4
+        uses: 'actions/download-artifact@cc203385981b70ca67e1cc392babf9cc229d5806' # ratchet:actions/download-artifact@v4
         with:
           name: 'guardian'
           path: '${{ runner.temp }}/.guardian'
@@ -145,7 +147,7 @@ jobs:
           service_account: '${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
 
       - name: 'Setup Terraform'
-        uses: 'abcxyz/secure-setup-terraform@7f93ab7480b59d0b9c03d7128402eb7e19148b4d' # ratchet:abcxyz/secure-setup-terraform@main
+        uses: 'abcxyz/secure-setup-terraform@665bd6de7cd6349a887d3dd52e7d031697d0717f' # ratchet:abcxyz/secure-setup-terraform@main
         with:
           terraform_version: '${{ env.GUARDIAN_TERRAFORM_VERSION }}'
           terraform_module_location: './${{ matrix.working_directory }}'
@@ -154,7 +156,7 @@ jobs:
           terraform_wrapper: false
 
       - name: 'Download Guardian'
-        uses: 'actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16' # ratchet:actions/download-artifact@v4
+        uses: 'actions/download-artifact@cc203385981b70ca67e1cc392babf9cc229d5806' # ratchet:actions/download-artifact@v4
         with:
           name: 'guardian'
           path: '${{ runner.temp }}/.guardian'
@@ -188,7 +190,7 @@ jobs:
         uses: 'actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683' # ratchet:actions/checkout@v4
 
       - name: 'Download Guardian'
-        uses: 'actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16' # ratchet:actions/download-artifact@v4
+        uses: 'actions/download-artifact@cc203385981b70ca67e1cc392babf9cc229d5806' # ratchet:actions/download-artifact@v4
         with:
           name: 'guardian'
           path: '${{ runner.temp }}/.guardian'
@@ -228,7 +230,7 @@ jobs:
           fetch-depth: 0 # get everything so we can use git diff
 
       - name: 'Download Guardian'
-        uses: 'actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16' # ratchet:actions/download-artifact@v4
+        uses: 'actions/download-artifact@cc203385981b70ca67e1cc392babf9cc229d5806' # ratchet:actions/download-artifact@v4
         with:
           name: 'guardian'
           path: '${{ runner.temp }}/.guardian'
@@ -283,7 +285,7 @@ jobs:
           service_account: '${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
 
       - name: 'Setup Terraform'
-        uses: 'abcxyz/secure-setup-terraform@7f93ab7480b59d0b9c03d7128402eb7e19148b4d' # ratchet:abcxyz/secure-setup-terraform@main
+        uses: 'abcxyz/secure-setup-terraform@665bd6de7cd6349a887d3dd52e7d031697d0717f' # ratchet:abcxyz/secure-setup-terraform@main
         with:
           terraform_version: '${{ env.GUARDIAN_TERRAFORM_VERSION }}'
           terraform_module_location: './${{ matrix.working_directory }}'
@@ -292,7 +294,7 @@ jobs:
           terraform_wrapper: false
 
       - name: 'Download Guardian'
-        uses: 'actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16' # ratchet:actions/download-artifact@v4
+        uses: 'actions/download-artifact@cc203385981b70ca67e1cc392babf9cc229d5806' # ratchet:actions/download-artifact@v4
         with:
           name: 'guardian'
           path: '${{ runner.temp }}/.guardian'
