--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -55,6 +55,8 @@ jobs:
 
       - name: 'Build Guardian'
         uses: 'goreleaser/goreleaser-action@90a3faa9d0182683851fbfa97ca1a2cb983bfca3' # ratchet:goreleaser/goreleaser-action@v6
+        env:
+          VERSION: '${{ github.workflow }}-${{ github.run_id }}-${{ github.run_attempt }}'
         with:
           distribution: 'goreleaser'
           version: 'v1.18.2'
