--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -45,8 +45,8 @@ jobs:
         with:
           version_strategy: '${{ inputs.version_strategy }}'
 
-      - id: 'auth'
-        name: 'Authenticate to Google Cloud'
+      - name: 'Authenticate to Google Cloud'
+        id: 'auth'
         uses: 'google-github-actions/auth@6fc4af4b145ae7821d527454aa9bd537d1f2dc5f' # ratchet:google-github-actions/auth@v2
         with:
           create_credentials_file: false
@@ -73,8 +73,9 @@ jobs:
               }
             }
 
-      - uses: 'actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea' # ratchet:actions/github-script@v7
+      - name: 'Generate Release Notes'
         id: 'generate-release-notes'
+        uses: 'actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea' # ratchet:actions/github-script@v7
         env:
           CURRENT_VERSION: '${{ steps.increment-version.outputs.current_version }}'
           NEXT_VERSION: '${{ steps.increment-version.outputs.next_version }}'
