--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -133,34 +133,25 @@ jobs:
             core.setOutput('created', true);
             core.info(`✅ Created release "${response.data.name}" at ${response.data.html_url}`);
 
-  build-and-publish:
+  build:
+    uses: './.github/workflows/build.yml'
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+    needs:
+      - 'create-release'
+    with:
+      version: '${{ needs.create-release.outputs.version }}'
+
+  publish-binaries:
     runs-on: 'ubuntu-latest'
     needs:
+      - 'build'
       - 'create-release'
     permissions:
       contents: 'read'
       id-token: 'write'
     steps:
-      - name: 'Checkout'
-        uses: 'actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683' # ratchet:actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: 'Setup Go'
-        uses: 'actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34' # ratchet:actions/setup-go@v5
-        with:
-          go-version-file: 'go.mod'
-
-      - name: 'Run GoReleaser'
-        uses: 'goreleaser/goreleaser-action@90a3faa9d0182683851fbfa97ca1a2cb983bfca3' # ratchet:goreleaser/goreleaser-action@v6
-        with:
-          distribution: 'goreleaser'
-          version: 'v1.18.2'
-          args: 'release'
-        env:
-          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-          VERSION: 'v${{ needs.create-release.outputs.version }}'
-
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@6fc4af4b145ae7821d527454aa9bd537d1f2dc5f' # ratchet:google-github-actions/auth@v2
@@ -188,6 +179,39 @@ jobs:
               }
             }
 
+      - uses: 'actions/download-artifact@cc203385981b70ca67e1cc392babf9cc229d5806' # ratchet:actions/download-artifact@v4
+        with:
+          pattern: '*'
+          path: 'dist/'
+          merge-multiple: true
+
+      - name: 'Compress and compute checksums'
+        run: |-
+          cd dist/
+
+          for BINARY in $(find * -type f); do
+            chmod +x "${BINARY}"
+
+            FOLDER="$(basename "${BINARY}" ".exe")"
+            NAME="${BINARY%%_*}"
+
+            if [ "${FOLDER}" != "${BINARY}" ]; then
+              NAME="${NAME}.exe"
+            fi
+
+            mv "${BINARY}" "${BINARY}.tmp"
+            mkdir "${FOLDER}"
+            mv "${BINARY}.tmp" "${FOLDER}/${NAME}"
+
+            (zip -9 -o -m -r -q "${FOLDER}.zip" "${FOLDER}" && \
+              rm -rf "${FOLDER}") &
+          done
+          wait
+
+          FILES="$(find * -name '*.zip')"
+          sha256sum ${FILES} > SHA256SUMS
+          sha512sum ${FILES} > SHA512SUMS
+
       - name: 'Upload binaries'
         env:
           GH_TOKEN: '${{ steps.mint-token.outputs.token }}'
@@ -205,7 +229,7 @@ jobs:
       id-token: 'write'
     needs:
       - 'create-release'
-      - 'build-and-publish'
+      - 'publish-binaries'
     steps:
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
@@ -255,8 +279,8 @@ jobs:
       contents: 'read'
       id-token: 'write'
     steps:
-      - id: 'auth'
-        name: 'Authenticate to Google Cloud'
+      - name: 'Authenticate to Google Cloud'
+        id: 'auth'
         uses: 'google-github-actions/auth@6fc4af4b145ae7821d527454aa9bd537d1f2dc5f' # ratchet:google-github-actions/auth@v2
         with:
           create_credentials_file: false
