--- a/.github/minty.yaml
+++ b/.github/minty.yaml
@@ -5,7 +5,6 @@ rule:
     assertion.iss == issuers.github &&
     assertion.repository_owner_id == '93787867' &&
     assertion.repository_id == '599811719' &&
-    assertion.ref == 'refs/heads/main' &&
     assertion.workflow_ref == assertion.job_workflow_ref
 
 scope:
@@ -13,6 +12,11 @@ scope:
     rule:
       if: |-
         assertion.workflow_ref.startsWith('abcxyz/guardian/.github/workflows/draft-release.yml') &&
+        assertion.ref in [
+          "refs/heads/main",
+          "refs/heads/release/v1",
+          "refs/heads/release/v2",
+        ]
         assertion.event_name == 'workflow_dispatch'
     repositories:
       - 'guardian'
@@ -24,6 +28,7 @@ scope:
     rule:
       if: |-
         assertion.workflow_ref.startsWith('abcxyz/guardian/.github/workflows/release.yml') &&
+        assertion.ref == 'refs/heads/main' &&
         assertion.event_name == 'push'
     repositories:
       - 'guardian'
